clusters/talos-cluster/postgres-cluster/loadbalancer-ro-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-cluster-ro-lb
  namespace: postgres-cluster
  annotations:
    external-dns.alpha.kubernetes.io/hostname: ro.pgc.horus
spec:
  type: LoadBalancer
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
    protocol: TCP
  selector:
    cnpg.io/cluster: postgres-cluster
    cnpg.io/instanceRole: replica  # Only route to replica instances
  sessionAffinity: ClientIP  # Stick to same backend for connection
