clusters/talos-cluster/postgres-cluster/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-lb
  namespace: postgres-cluster
spec:
  type: LoadBalancer
  ports:
  - port: 5432
    targetPort: 5432
    protocol: TCP
    name: postgres
  selector:
    cnpg.io/cluster: postgres-cluster
    role: primary
