clusters/talos-cluster/postgres-cluster/postgres-tcproute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-tcp
  namespace: postgres-cluster
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: traefik
      sectionName: postgres
  rules:
    - backendRefs:
        - name: postgres-cluster-rw
          port: 5432
